# findutils-rs

./: Cargo.toml  README.md  criterion.toml
benches/: parens.rs
src/lib/: ast.rs  effects.rs  errors.rs  execute.rs  lib.rs  metadata.rs  options.rs  parser.rs  platform.rs  predicate.rs  source.rs
src/lib/parser/: lexer.rs  tests.rs
src/lib/parser/tests/: and.rs  comma.rs  or.rs  parens.rs  program.rs  type_pred.rs
src/lib/platform/: linux.rs  unix.rs
src/lib/source/: fts_rs.rs  fts_sys.rs
tests/: find_runs.rs
