[package]
name = "findutils-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
tempdir = "0.3"

[dependencies]
fts = "0.3"
fts-sys = "0.2.9"
getopt = "1.1"
enum-iterator = "2"
downcast-rs = "1.2.1"
libc = "0.2"

[lib]
name = "findlib"
path = "src/lib/lib.rs"

[[bin]]
name = "find"

[[bench]]
name = "parens"
harness = false

[features]
default = ["fts_sys"]
fts_sys=[]
fts_rs=[]
