# This file is part of findutils-rs
# Copyright (C) 2024 James Youngman
#
# findutils-rs is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "findutils-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
tempdir = "0.3"

[dependencies]
fts = "0.3"
fts-sys = "0.2.9"
getopt = "1.1"
enum-iterator = "2"
downcast-rs = "1.2.1"
libc = "0.2"

[lib]
name = "findlib"
path = "src/lib/lib.rs"

[[bin]]
name = "find"

[[bench]]
name = "parens"
harness = false

[features]
default = ["fts_sys"]
fts_sys=[]
fts_rs=[]
